--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,19 @@
 default_stages: [commit, push]
 default_language_version:
-  python: python3.8
+  python: python3.9
 repos:
   - repo: https://github.com/psf/black
-    rev: 21.8b0
+    rev: 22.3.0
     hooks:
     - id: black
       args: [
-        --line-length=80,
-        --target-version=py38
+        --line-length=120,
+        --target-version=py39
       ]
       exclude: ^(venv/|docs/)
       types: ['python']
-  - repo: local
+  - repo: https://github.com/PyCQA/pylint
+    rev: v2.13.2
     hooks:
       - id: pylint
         name: pylint
